--- a/app/src/main/res/layout/activity_hcf.xml
+++ b/app/src/main/res/layout/activity_hcf.xml
@@ -47,10 +47,10 @@
             <Button android:id="@+id/three" style="@style/KeypadButton" android:layout_width="0dp" android:layout_weight="1" android:text="@integer/three" />
             <ImageButton android:id="@+id/add" style="@style/KeypadIconButton" android:layout_width="0dp" android:layout_weight="1" android:contentDescription="@string/add" android:src="@drawable/ic_subdirectory_arrow_left_black_24dp" />
         </LinearLayout>
-        <!-- Row 4 -->
+        <!-- Row 4 standardized -->
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="@dimen/keypad_row_spacing">
             <Button android:id="@+id/zero" style="@style/KeypadButton" android:layout_width="0dp" android:layout_weight="1" android:text="@integer/zero" />
-            <Button android:id="@+id/equal" style="@style/KeypadButton.Primary" android:layout_width="0dp" android:layout_weight="3" android:text="@string/equal9" android:textStyle="bold" />
+            <ImageButton android:id="@+id/equal" style="@style/KeypadResultButton" android:layout_width="0dp" android:layout_weight="1" android:contentDescription="@string/send" android:src="@drawable/ic_result_arrow" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
