--- a/app/src/main/res/layout/activity_addition.xml
+++ b/app/src/main/res/layout/activity_addition.xml
@@ -141,7 +141,7 @@
                 style="@style/KeypadButton"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text="." />
+                android:text="@string/dot" />
             <ImageButton
                 android:id="@+id/equal"
                 style="@style/KeypadResultButton"
