--- a/app/src/main/res/layout/division.xml
+++ b/app/src/main/res/layout/division.xml
@@ -6,6 +6,8 @@
 <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignParentTop="true"
+    android:layout_above="@id/adView"
     >
 
     <LinearLayout
