--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -19,6 +19,7 @@
         android:scrollbars = "vertical"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:fontFamily="monospace"
         />
 
 
