--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -17,8 +17,7 @@
         android:maxLines="50"
         android:scrollbars="vertical"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:fontFamily="monospace" />
+        android:focusableInTouchMode="true" />
 
     <LinearLayout
         android:id="@+id/first"
