--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -53,7 +53,7 @@
 
         <!-- Row 4 (arrow only) -->
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="@dimen/keypad_row_spacing">
-            <ImageButton android:id="@+id/equal" style="@style/KeypadResultButton" android:layout_width="match_parent" android:layout_weight="1" android:contentDescription="@string/send" android:src="@drawable/ic_result_arrow" />
+            <ImageButton android:id="@+id/equal" style="@style/KeypadResultButton" android:layout_width="0dp" android:layout_weight="4" android:contentDescription="@string/send" android:src="@drawable/ic_result_arrow" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
