LCM Changes Completed

--- a/app/src/main/res/layout/lcm_division.xml
+++ b/app/src/main/res/layout/lcm_division.xml
@@ -26,8 +26,7 @@
         <!-- Table area: primes | divider | numbers -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:fillViewport="true">
 
             <com.infovsn.homework.LcmTableView
