--- a/app/src/main/res/layout/activity_odd_numbers_result.xml
+++ b/app/src/main/res/layout/activity_odd_numbers_result.xml
@@ -14,21 +14,20 @@
             android:id="@+id/oddResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:paddingLeft="20dp"
-            android:layout_weight="2"
+            android:textSize="30sp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:textColor="#000000"/>
 
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:adSize="BANNER">
     </com.google.android.gms.ads.AdView>
 </RelativeLayout>
-
