--- a/app/src/main/res/layout/activity_prime_numbers_result.xml
+++ b/app/src/main/res/layout/activity_prime_numbers_result.xml
@@ -42,11 +42,11 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:adSize="BANNER">
     </com.google.android.gms.ads.AdView>
 </RelativeLayout>
