--- a/app/src/main/res/layout/added.xml
+++ b/app/src/main/res/layout/added.xml
@@ -6,7 +6,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_above="@id/adView">
     <TextView
         android:id="@+id/txtScr"
         android:layout_width="match_parent"
@@ -24,11 +25,11 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:adSize="BANNER">
             </com.google.android.gms.ads.AdView>
 </RelativeLayout>
