--- a/app/src/main/res/layout/hcf_division.xml
+++ b/app/src/main/res/layout/hcf_division.xml
@@ -49,11 +49,11 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" />
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:adSize="BANNER" />
 
 </RelativeLayout>
