Native ad Changes

--- a/app/src/main/res/layout/activity_odd_numbers_result.xml
+++ b/app/src/main/res/layout/activity_odd_numbers_result.xml
@@ -6,9 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.infovsn.homework.OddNumbersResult">
 
+    <!-- Content scrolls and stays above the anchored adView at the bottom -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_above="@id/adView">
 
         <TextView
             android:id="@+id/oddResult"
