--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="keypad_corner_radius">12dp</dimen>
     <dimen name="display_corner_radius">16dp</dimen>
     <dimen name="keypad_row_spacing">0dp</dimen>
+    <dimen name="native_media_max_height">160dp</dimen>
 </resources>
