--- a/app/src/main/res/layout/activity_prime_numbers_result.xml
+++ b/app/src/main/res/layout/activity_prime_numbers_result.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundDark"
@@ -12,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/adView">
+        android:layout_above="@id/ad_container">
 
         <LinearLayout
+            android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -40,13 +40,11 @@
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <!-- Flexible ad container anchored to the bottom; content stays above it. -->
+    <com.infovsn.homework.MaxHeightFrameLayout
+        android:id="@+id/ad_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:adSize="BANNER">
-    </com.google.android.gms.ads.AdView>
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
