--- a/app/src/main/res/layout/added.xml
+++ b/app/src/main/res/layout/added.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_above="@id/adView">
-    <TextView
-        android:id="@+id/txtScr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right|center_vertical|bottom"
-        android:paddingRight="20dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30sp"
-        android:maxLines = "50"
-        android:scrollbars = "vertical"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        />
-</LinearLayout>
+    android:layout_height="match_parent">
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <LinearLayout
+        android:id="@+id/content_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_above="@id/ad_container">
+
+        <TextView
+            android:id="@+id/txtScr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right|center_vertical|bottom"
+            android:paddingRight="20dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="30sp"
+            android:maxLines = "50"
+            android:scrollbars = "vertical"
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
+    </LinearLayout>
+
+    <!-- Flexible bottom ad container, hosts native or banner fallback without pushing content -->
+    <com.infovsn.homework.MaxHeightFrameLayout
+        android:id="@+id/ad_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:adSize="BANNER">
-            </com.google.android.gms.ads.AdView>
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
