--- a/app/src/main/res/layout/native_ad_large.xml
+++ b/app/src/main/res/layout/native_ad_large.xml
@@ -67,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:minHeight="120dp"
             android:layout_marginTop="10dp" />
 
         <TextView
@@ -80,4 +81,3 @@
             android:ellipsize="end" />
     </LinearLayout>
 </com.google.android.gms.ads.nativead.NativeAdView>
-
