--- a/app/src/main/res/layout/native_ad_medium.xml
+++ b/app/src/main/res/layout/native_ad_medium.xml
@@ -66,6 +66,7 @@
             android:id="@+id/ad_media"
             android:layout_width="match_parent"
             android:layout_height="180dp"
+            android:minHeight="120dp"
             android:layout_marginTop="8dp" />
 
         <TextView
@@ -79,4 +80,3 @@
             android:ellipsize="end" />
     </LinearLayout>
 </com.google.android.gms.ads.nativead.NativeAdView>
-
