--- a/app/src/main/res/layout/lcm_division.xml
+++ b/app/src/main/res/layout/lcm_division.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/adView"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ad_container"
         android:orientation="vertical"
         android:padding="8dp">
 
@@ -48,13 +47,12 @@
             android:paddingBottom="4dp" />
     </LinearLayout>
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <!-- Flexible bottom ad container for dynamic native or banner fallback -->
+    <com.infovsn.homework.MaxHeightFrameLayout
+        android:id="@+id/ad_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:adSize="BANNER" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
