Even & Odd Changes

--- a/app/src/main/res/layout/activity_even_numbers_result.xml
+++ b/app/src/main/res/layout/activity_even_numbers_result.xml
@@ -6,21 +6,31 @@
     android:layout_height="match_parent"
     tools:context="com.infovsn.homework.EvenNumbersResult">
 
-    <!-- Content scrolls and stays above the anchored adView at the bottom -->
+    <!-- Content scrolls from the top and stays above the anchored adView at the bottom -->
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/adView">
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/adView"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/evenResult"
+        <LinearLayout
+            android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:orientation="vertical"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textColor="#000000"/>
+            android:paddingTop="16dp">
 
+            <TextView
+                android:id="@+id/evenResult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:textColor="#000000"/>
+        </LinearLayout>
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
