--- a/app/src/main/res/layout/activity_prime_numbers_result.xml
+++ b/app/src/main/res/layout/activity_prime_numbers_result.xml
@@ -9,38 +9,48 @@
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/ad_container">
+        android:fillViewport="true">
 
         <LinearLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="16dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/headerTitleResult"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/title_prime_result"
-                android:textSize="22sp"
-                android:textColor="@color/textPrimary"
-                android:paddingBottom="8dp"/>
-
-            <TextView
-                android:id="@+id/primeResult"
+            <androidx.cardview.widget.CardView
+                style="@style/ContentCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:textColor="#000000"/>
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/card_content_padding">
+
+                    <TextView
+                        android:id="@+id/headerTitleResult"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_prime_result"
+                        android:textSize="22sp"
+                        android:textColor="@color/textPrimary"
+                        android:paddingBottom="8dp"/>
+
+                    <TextView
+                        android:id="@+id/primeResult"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="30sp"
+                        android:textColor="#000000"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
-    <!-- Flexible ad container anchored to the bottom; content stays above it. -->
+    <!-- Flexible ad container anchored to the bottom; overlays without pushing content -->
     <com.infovsn.homework.MaxHeightFrameLayout
         android:id="@+id/ad_container"
         android:layout_width="match_parent"
