--- a/app/src/main/res/layout/added.xml
+++ b/app/src/main/res/layout/added.xml
@@ -7,21 +7,32 @@
         android:id="@+id/content_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@id/ad_container">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtScr"
+        <androidx.cardview.widget.CardView
+            style="@style/ContentCard"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right|center_vertical|bottom"
-            android:paddingRight="20dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp"
-            android:maxLines = "50"
-            android:scrollbars = "vertical"
-            android:focusable="true"
-            android:focusableInTouchMode="true"/>
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/card_content_padding">
+
+                <TextView
+                    android:id="@+id/txtScr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end|center_vertical|bottom"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="30sp"
+                    android:maxLines = "50"
+                    android:scrollbars = "vertical"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <!-- Flexible bottom ad container, hosts native or banner fallback without pushing content -->
