--- a/app/src/main/res/layout/hcf_division.xml
+++ b/app/src/main/res/layout/hcf_division.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Top-aligned scrollable content area constrained above the ad container -->
     <ScrollView
-        android:id="@+id/scrollContent"
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_above="@id/ad_container"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:id="@+id/content"
@@ -19,6 +18,7 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/content_card"
                 style="@style/ContentCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -38,7 +38,7 @@
                         android:textStyle="bold"
                         android:paddingBottom="8dp" />
 
-                    <!-- Table area: primes | divider | numbers -->
+                    <!-- Table for common factors division -->
                     <com.infovsn.homework.LcmTableView
                         android:id="@+id/hcfTable"
                         android:layout_width="match_parent"
@@ -55,16 +55,22 @@
                         android:paddingBottom="4dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <!-- Adaptive Native Ad Card placed in natural flow below content -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ad_card"
+                style="@style/ContentCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentPadding="0dp">
+
+                <com.infovsn.homework.MaxHeightFrameLayout
+                    android:id="@+id/ad_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
-    <!-- Flexible bottom ad container for dynamic native or banner fallback -->
-    <com.infovsn.homework.MaxHeightFrameLayout
-        android:id="@+id/ad_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:minHeight="50dp" />
-
+    <!-- Removed bottom overlay ad container to prevent overlap with content -->
 </RelativeLayout>
